--- a/src/main/app/index.html
+++ b/src/main/app/index.html
@@ -9,6 +9,7 @@
 
     <link href="assets/lib/bootstrap-3.3.4/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/lib/font-awesome-4.3.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="assets/lib/angular-motion-0.3.4.min.css" rel="stylesheet">
     <link href="assets/app/css/app.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -33,6 +34,8 @@
     <script src="assets/lib/bootstrap-3.3.4/js/bootstrap.min.js"></script>
     <script src="assets/lib/angular.min.js"></script>
     <script src="assets/lib/angular-resource.min.js"></script>
+    <script src="assets/lib/angular-strap-2.2.1.min.js"></script>
+    <script src="assets/lib/angular-strap-2.2.1.tpl.min.js"></script>
     <script src="assets/lib/angular-route.min.js"></script>
     <script src="assets/app/js/app-0.2.0.min.js"></script>
 
