--- a/src/main/app/index.html
+++ b/src/main/app/index.html
@@ -21,9 +21,7 @@
   </head>
   <body>
 
-    <header ng-controller="HeaderController" ng-include="'assets/app/partials/header-navbar.html'">
-
-    </header>
+    <header ng-controller="HeaderController" ng-include="'assets/app/partials/header-navbar.html'"></header>
 
     <section id="main" ng-view></section>
 
@@ -32,11 +30,11 @@
     <script src="assets/lib/jquery-2.1.3.min.js"></script>
     <script src="assets/lib/json2.js"></script>
     <script src="assets/lib/bootstrap-3.3.4/js/bootstrap.min.js"></script>
-    <script src="assets/lib/angular.min.js"></script>
-    <script src="assets/lib/angular-resource.min.js"></script>
+    <script src="assets/lib/angular-1.3.14.min.js"></script>
+    <script src="assets/lib/angular-resource-1.3.14.min.js"></script>
+    <script src="assets/lib/angular-route-1.3.14.min.js"></script>
     <script src="assets/lib/angular-strap-2.2.1.min.js"></script>
     <script src="assets/lib/angular-strap-2.2.1.tpl.min.js"></script>
-    <script src="assets/lib/angular-route.min.js"></script>
     <script src="assets/app/js/app-0.2.0.min.js"></script>
 
   </body>
