Included Bootstrap Additions CSS for AngularStrap.

--- a/src/main/app/index.html
+++ b/src/main/app/index.html
@@ -10,6 +10,7 @@
     <link href="assets/lib/bootstrap-3.3.4/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/lib/font-awesome-4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="assets/lib/angular-motion-0.3.4.min.css" rel="stylesheet">
+    <link href="assets/lib/bootstrap-additions-0.2.3.min.css" rel="stylesheet">
     <link href="assets/app/css/app.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
