Added Footer controller.  Applied date filter to footer template.

--- a/src/main/app/index.html
+++ b/src/main/app/index.html
@@ -26,7 +26,7 @@
 
     <section id="main" ng-view></section>
 
-    <footer ng-include="'assets/app/partials/footer.html'"></footer>
+    <footer ng-controller="FooterController" ng-include="'assets/app/partials/footer.html'"></footer>
 
     <script src="assets/lib/jquery-2.1.3.min.js"></script>
     <script src="assets/lib/json2.js"></script>
